OAK-11311: Remove usage of Guava ImmutableList - oak-segment-tar